--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
+    "axios": "^0.24.0",
     "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
