--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.5",
+    "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
     "axios": "^0.24.0",
     "next": "^11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-toastify": "^8.0.3"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
