--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,15 @@
     "@mui/icons-material": "^5.0.5",
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
+    "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.24.0",
     "next": "^11.1.2",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-toastify": "^8.0.3"
+    "react-redux": "^7.2.6",
+    "react-toastify": "^8.0.3",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
