--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=store.db"
+  },
+  "JWTSettings" : {
+    "TokenKey": "phucthangvt1101 phucthangvt1101 phucthangvt1101 phucthangvt1101"
   }
 }
