--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.20.2",
     "react-redux": "^7.2.6",
     "react-toastify": "^8.0.3",
     "redux": "^4.1.2"
