Add checkout and show order features

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.8.3",
     "@mui/icons-material": "^5.0.5",
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
@@ -23,7 +24,8 @@
     "react-hook-form": "^7.20.2",
     "react-redux": "^7.2.6",
     "react-toastify": "^8.0.3",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
