--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
     "@reduxjs/toolkit": "^1.6.2",
+    "@stripe/react-stripe-js": "^1.6.0",
+    "@stripe/stripe-js": "^1.21.1",
     "axios": "^0.24.0",
     "next": "^11.1.2",
     "next-redux-wrapper": "^7.0.5",
