--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=store.db"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=storeDB;Integrated Security=True"
   },
   "JWTSettings": {
     "TokenKey": "phucthangvt1101 phucthangvt1101 phucthangvt1101 phucthangvt1101"
