--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["next/core-web-vitals","next/babel"]
+  "extends": ["next/core-web-vitals","next/babel"],
+  "parser": "babel-eslint"
 }
+// {
+//   "extends": ["next", "next/core-web-vitals"]
+// }
