--- a/client/package.json
+++ b/client/package.json
@@ -18,20 +18,26 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.21.1",
+    "@types/react-slick": "^0.23.7",
     "axios": "^0.24.0",
     "next": "^11.1.2",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-hook-form": "^7.20.2",
     "react-redux": "^7.2.6",
+    "react-slick": "^0.28.1",
     "react-toastify": "^8.0.3",
     "redux": "^4.1.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^7.3.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
+    "babel-eslint": "^10.1.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.1",
     "typescript": "4.4.4"
